--- a/iren.html
+++ b/iren.html
@@ -262,7 +262,7 @@
   <p>
     Совместно с представителем
     группировки <b>ИНКВИЗИТОРОВ</b>
-    и субъектом <b>ELLIS</b>
+    и субъектом <b>Эллис</b>
     проведена операция
     по поиску заражённого тела
     в медицинском учреждении.
