--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <div class="meta">
       <div class="name">ДАНИЭЛЬ АРМЕТ</div>
       <div class="role mono">ТЕХНИК / АГЕНТ МЕТАКОРП</div>
+      <div class="ghostline mono"
+     data-real="ACCESS: RESTRICTED // FILE SEALED"
+     data-fake="ACCESS: OVERRIDE // LEAK DETECTED">
+  ACCESS: RESTRICTED // FILE SEALED
+</div>
+
       <div class="tags">
         <span class="pill warn">ACTIVE</span>
         <span class="pill warn">RESTRICTED</span>
