--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="name">ДАНИЭЛЬ АРМЕТ</div>
       <div class="role mono">ТЕХНИК / АГЕНТ МЕТАКОРП</div>
       <div class="ghostline mono"
-     data-real="ACCESS: RESTRICTED // FILE SEALED"
-     data-fake="ACCESS: OVERRIDE // LEAK DETECTED">
+     data-real="ACCESS: RESTRICTED"
+     data-fake="ACCESS: OVERRIDE">
   ACCESS: RESTRICTED // FILE SEALED
 </div>
 
