--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="name">ДАНИЭЛЬ АРМЕТ</div>
       <div class="role mono">ТЕХНИК / АГЕНТ МЕТАКОРП</div>
       <div class="ghostline mono"
-     data-real="ACCESS: RESTRICTED"
+     data-real="ACCESS: OPEN"
      data-fake="ACCESS: OVERRIDE">
-  ACCESS: RESTRICTED // FILE SEALED
+  ACCESS: OPEN
 </div>
 
       <div class="tags">
