--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="connected-as">
-  CONNECTED AS: <a class="userlink" href="#" id="sybban">SYBBAN</a>
+  CONNECTED AS: <a class="userlink" data-rickroll="1">SYBBAN</a>
 </div>
 
     
