--- a/archive.html
+++ b/archive.html
@@ -62,9 +62,61 @@
       <section class="card" id="family">
         <div class="card__title">СЕМЕЙНАЯ СРЕДА (ФУНКЦИОНАЛЬНАЯ МОДЕЛЬ)</div>
 
-        <p>Один из родителей был переведён в регион Night City для работы в смежной медицинско-биотехнологической структуре.</p>
-        <p>Второй родитель остался в европейском секторе и инициировал включение субъекта в корпоративную образовательную среду
-        из соображений безопасности и управляемости.</p>
+    
+        <p>Фамилия: Vail
+Происхождение: европейский регион, корпоративный сектор фармацевтики
+
+Отец
+
+Имя: Adrien Vail
+Специализация: полевой медицинский специалист / биомедицинский подрядчик
+Корпоративные связи: внешние контракты (в т.ч. Night City, частные медико-военные структуры)
+
+Adrien Vail длительное время работал в зонах повышенного риска, включая регионы за пределами Европы.
+Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры.
+
+Отличительные черты:
+
+высокая дисциплина
+
+ориентация на протокол
+
+низкая эмоциональная реактивность
+
+Контакт с матерью субъекта был установлен в ходе совместной работы в медицинском контуре.
+Позднее семья переместилась в Швейцарию.
+
+Мать
+
+Имя: Claire Vail
+Специализация: биоаналитика / фармацевтические исследования
+Роль в семье: координация, стратегические решения, образовательная среда
+
+Claire Vail принимала участие в клинических и исследовательских проектах, связанных с биологической совместимостью и адаптацией имплантов.
+Поддерживала карьерные решения, ориентированные на стабильность и доступ к ресурсам.
+
+Эмоциональное взаимодействие с детьми характеризовалось как сдержанное, но не отчуждённое.
+Приоритет отдавался безопасности, результату и долгосрочным перспективам.
+
+Старший брат
+
+Имя: Luc Vail
+Статус: жив, состояние стабилизировано
+Особенности: подтверждённая биологическая несовместимость с имплантами
+
+Luc Vail с раннего возраста демонстрировал отрицательную реакцию на стандартные имплантируемые системы, включая базовые нейроинтерфейсы.
+Состояние классифицировалось как редкое, не связанное с дефектами протоколов или производственных стандартов.
+
+После продолжительного лечения состояние стабилизировано.
+Активное участие в корпоративных или силовых структурах исключено.
+
+На текущий момент:
+
+избегает имплантов
+
+ведёт низкорисковый образ жизни
+
+возможна консультативная или вспомогательная деятельность.</p>
 
         <ul class="list">
           <li>«Ты справишься. Ты умный.»</li>
