--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -170,7 +170,7 @@
   </p>
 
   <p class="muted">
-    Известно минимум о двух субъектках женского пола
+    Известно минимум о двух субъектках женского пола<br>
     Статус: принадлежность к группе
     <b>ИНКВИЗИТОРОВ</b>
     - <b>ПОДТВЕРЖДЕНА</b>.<br>
