--- a/archive.html
+++ b/archive.html
@@ -66,22 +66,20 @@
         <p>Фамилия: Вэйл
 Происхождение: европейский регион, корпоративный сектор фармацевтики </p>
 
-<p>Отец
+<p><b>Отец</b>
 
-Имя: Адриан Вэйл
-Специализация: полевой медицинский специалист / биомедицинский подрядчик
-Корпоративные связи: внешние контракты (в т.ч. Night City, частные медико-военные структуры)
+Имя: <b>Адриан Вэйл</b><br>
+Специализация: полевой медицинский специалист / биомедицинский подрядчик<br>
+Корпоративные связи: внешние контракты (в т.ч. Night City, частные медико-военные структуры)</p>
 
-Adrien Vail длительное время работал в зонах повышенного риска, включая регионы за пределами Европы.
-Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры.
+<p>Адриан Вэйл длительное время работал в зонах повышенного риска, включая регионы за пределами Европы.
+Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры.<br>
 
-Отличительные черты:
+Отличительные черты:<br>
 
-высокая дисциплина
-
-ориентация на протокол
-
-низкая эмоциональная реактивность
+- высокая дисциплина<br>
+- ориентация на протокол<br>
+- низкая эмоциональная реактивность<br>
 
 Контакт с матерью субъекта был установлен в ходе совместной работы в медицинском контуре.
 Позднее семья переместилась в Швейцарию. </p>
