--- a/archive.html
+++ b/archive.html
@@ -66,7 +66,7 @@
         <p>Фамилия: Вэйл
 Происхождение: европейский регион, корпоративный сектор фармацевтики </p>
 
-<p><b>Отец</b>
+<p><b>Отец</b><br>
 
 Имя: <b>Адриан Вэйл</b><br>
 Специализация: полевой медицинский специалист / биомедицинский подрядчик<br>
@@ -76,52 +76,44 @@
 Имеются данные о сотрудничестве с частными медицинскими и силовыми подразделениями в Night City в ранний период карьеры.<br>
 
 Отличительные черты:<br>
-
-- высокая дисциплина<br>
-- ориентация на протокол<br>
-- низкая эмоциональная реактивность<br>
-
+        <ul class="list">
+          <li>высокая дисциплина</li>
+          <li>ориентация на протокол</li>
+          <li>низкая эмоциональная реактивность</li>
+        </ul>
 Контакт с матерью субъекта был установлен в ходе совместной работы в медицинском контуре.
 Позднее семья переместилась в Швейцарию. </p>
 
-<p>Мать
+<p><b>Мать</b><br>
 
-Имя: Петра Вэйл
-Специализация: биоаналитика / фармацевтические исследования
-Роль в семье: координация, стратегические решения, образовательная среда
+Имя: <b>Петра Вэйл</b><br>
+Специализация: биоаналитика / фармацевтические исследования<br>
+Роль в семье: координация, стратегические решения, образовательная среда<br></p>
 
-Claire Vail принимала участие в клинических и исследовательских проектах, связанных с биологической совместимостью и адаптацией имплантов.
-Поддерживала карьерные решения, ориентированные на стабильность и доступ к ресурсам.
+<p>Петра Вэйл принимала участие в клинических и исследовательских проектах, связанных с биологической совместимостью и адаптацией имплантов.<br>
+Поддерживала карьерные решения, ориентированные на стабильность и доступ к ресурсам.</p>
 
-Эмоциональное взаимодействие с детьми характеризовалось как сдержанное, но не отчуждённое.
+<p>Эмоциональное взаимодействие с детьми характеризовалось как сдержанное, но не отчуждённое.<br>
 Приоритет отдавался безопасности, результату и долгосрочным перспективам. </p>
 
-<p>Старший брат
+<p><b>Старший брат</b><br>
 
-Имя: Luc Vail
-Статус: жив, состояние стабилизировано
-Особенности: подтверждённая биологическая несовместимость с имплантами
+Имя: <b>Люк Вейл</b><br>
+Статус: жив, состояние стабилизировано<br>
+Особенности: подтверждённая биологическая несовместимость с имплантами</p>
 
-Luc Vail с раннего возраста демонстрировал отрицательную реакцию на стандартные имплантируемые системы, включая базовые нейроинтерфейсы.
-Состояние классифицировалось как редкое, не связанное с дефектами протоколов или производственных стандартов.
+<p>Luc Vail с раннего возраста демонстрировал отрицательную реакцию на стандартные имплантируемые системы, включая базовые нейроинтерфейсы.
+Состояние классифицировалось как редкое, не связанное с дефектами протоколов или производственных стандартов.</p>
 
-После продолжительного лечения состояние стабилизировано.
-Активное участие в корпоративных или силовых структурах исключено.
+<p>После продолжительного лечения состояние стабилизировано.
+Активное участие в корпоративных или силовых структурах исключено.</p>
 
-На текущий момент:
-
-избегает имплантов
-
-ведёт низкорисковый образ жизни
-
-возможна консультативная или вспомогательная деятельность.</p>
-
+<p>На текущий момент:
         <ul class="list">
-          <li>«Ты справишься. Ты умный.»</li>
-          <li>«Не усложняй.»</li>
-          <li>«Эмоции мешают работе.»</li>
-          <li>«Главное результат.»</li>
-        </ul>
+          <li>избегает имплантов</li>
+          <li>ведёт низкорисковый образ жизни</li>
+          <li>возможна консультативная или вспомогательная деятельность</li>
+        </ul> </p>
 
         <div class="note">
           <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
