--- a/archive.html
+++ b/archive.html
@@ -80,9 +80,9 @@
           <li>высокая дисциплина</li>
           <li>ориентация на протокол</li>
           <li>низкая эмоциональная реактивность</li>
-        </ul>
-Контакт с матерью субъекта был установлен в ходе совместной работы в медицинском контуре.
-Позднее семья переместилась в Швейцарию. </p>
+        </ul><p>
+<p>Контакт с матерью субъекта был установлен в ходе совместной работы в медицинском контуре.
+Позднее семья переместилась в Швейцарию.</p>
 
 <p><b>Мать</b><br>
 
@@ -102,7 +102,7 @@
 Статус: жив, состояние стабилизировано<br>
 Особенности: подтверждённая биологическая несовместимость с имплантами</p>
 
-<p>Luc Vail с раннего возраста демонстрировал отрицательную реакцию на стандартные имплантируемые системы, включая базовые нейроинтерфейсы.
+<p>Люк с раннего возраста демонстрировал отрицательную реакцию на стандартные имплантируемые системы, включая базовые нейроинтерфейсы.
 Состояние классифицировалось как редкое, не связанное с дефектами протоколов или производственных стандартов.</p>
 
 <p>После продолжительного лечения состояние стабилизировано.
@@ -157,6 +157,137 @@
         </div>
       </section>
 
+<section class="card" id="fatal-cases">
+
+  <div class="card__title">КЛИНИЧЕСКАЯ ПРАКТИКА // ЛЕТАЛЬНЫЕ ИСХОДЫ</div>
+
+  <p>
+    В рамках перехода субъекта от обучающегося к полевому медицинскому специалисту
+    были зафиксированы два ключевых клинических случая с летальным исходом,
+    оказавших значительное влияние на формирование профессионального профиля.
+  </p>
+
+  <hr>
+
+  <p><strong>СЛУЧАЙ №1 — ПЕРВЫЙ ЛЕТАЛЬНЫЙ ИСХОД</strong></p>
+
+  <p>
+    Случай произошёл в период начальной полевой практики субъекта
+    в гражданском секторе с ограниченными ресурсами.
+  </p>
+
+  <p>
+    Пациент был доставлен с тяжёлыми травмами, несовместимыми
+    с немедленной стабилизацией при имеющемся оборудовании.
+  </p>
+
+  <p>
+    Эллис участвовал в оказании помощи в полном объёме своих полномочий:
+  </p>
+
+  <ul class="list">
+    <li>стабилизация дыхания</li>
+    <li>остановка кровопотери</li>
+    <li>поддержание жизненных показателей</li>
+  </ul>
+
+  <p>
+    Процедуры выполнялись корректно.
+    Ошибок в действиях субъекта не зафиксировано.
+  </p>
+
+  <p><span class="pill">ИТОГ</span> Пациент скончался.</p>
+
+  <p class="muted">
+    Формальный вывод: летальный исход обусловлен тяжестью первоначальных повреждений.
+    Действия медицинского персонала признаны соответствующими протоколу.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Я сделал всё, что мог.<br>
+      И этого оказалось недостаточно.<br><br>
+      Впервые я понял, что старание не гарантирует результата.
+    </div>
+  </div>
+
+  <hr>
+
+  <p><strong>СЛУЧАЙ №2 — ПОВТОРЯЮЩИЙСЯ ЛЕТАЛЬНЫЙ ИСХОД</strong></p>
+
+  <p>
+    Случай зафиксирован в ходе последующей полевой практики
+    после завершения базового цикла обучения.
+  </p>
+
+  <p>
+    Пациент поступил в критическом состоянии.
+    Первичная оценка указывала на крайне низкую вероятность стабилизации.
+  </p>
+
+  <p>
+    Эллис произвёл краткую оценку состояния,
+    инициировал базовые меры поддержки и
+    <strong>прекратил расширенное вмешательство</strong>
+    после подтверждения бесперспективности дальнейших действий.
+  </p>
+
+  <p>
+    Ресурсы были перераспределены на других пострадавших.
+  </p>
+
+  <p><span class="pill">ИТОГ</span> Пациент скончался.</p>
+
+  <p class="muted">
+    Формальный вывод: решение признано своевременным.
+    Действия субъекта соответствуют протоколам оптимизации ресурсов.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      В прошлый раз я держал его за руку до конца.<br>
+      В этот раз — я просто посмотрел на показатели
+      и переключился на следующего.<br><br>
+      Меня за это не наказали.<br>
+      Меня за это похвалили.
+    </div>
+  </div>
+
+  <hr>
+
+  <p><strong>ПСИХОЛОГИЧЕСКИЙ ПРОФИЛЬ (ОЦЕНКА)</strong></p>
+
+  <p class="muted">
+    По результатам наблюдений и разборов случаев
+    у субъекта отмечается формирование
+    <strong>эмоционально нестабильного, но функционального профиля</strong>.
+  </p>
+
+  <ul class="list">
+    <li>высокая эмпатия при первом контакте</li>
+    <li>быстрое подавление эмоциональной реакции в кризисе</li>
+    <li>накопление внутреннего напряжения после инцидентов</li>
+    <li>отсутствие внешних признаков дезорганизации</li>
+  </ul>
+
+  <p class="muted">
+    Эмоциональная нестабильность не приводит к снижению эффективности,
+    однако требует внешнего контроля при длительной полевой нагрузке.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Я научился не ломаться в моменте.<br>
+      Но никто не учил, что делать с этим потом.
+    </div>
+  </div>
+
+</section>
+
+      
       <section class="card" id="offreg">
   <div class="card__title">ОПЕРАЦИЯ ВНЕ РЕЕСТРА // LATAM (ДОСЬЕ)</div>
 
