--- a/archive.html
+++ b/archive.html
@@ -124,38 +124,114 @@
         </div>
       </section>
 
-      <section class="card" id="edu">
-        <div class="card__title">ОБРАЗОВАНИЕ (КОРПОРАТИВНАЯ МЕД-ПРОГРАММА)</div>
+<section class="card" id="education">
 
-        <p>Субъект прошёл обучение в корпоративном медицинском интернате с ранней специализацией и ускоренным допуском к практике.</p>
+  <div class="card__title">КОРПОРАТИВНОЕ ОБУЧЕНИЕ // ПРАКТИЧЕСКАЯ ПОДГОТОВКА</div>
 
-        <div class="grid2">
-          <div class="card" style="padding:12px">
-            <div class="card__title">ПОЩРЯЛОСЬ</div>
-            <ul class="list">
-              <li>скорость решений</li>
-              <li>хладнокровие</li>
-              <li>эффективность</li>
-            </ul>
-          </div>
+  <p>
+    Субъект прошёл обучение в закрытой корпоративной медицинской программе
+    ранней подготовки, ориентированной на работу в нестабильных и высокорисковых средах.
+  </p>
 
-          <div class="card" style="padding:12px">
-            <div class="card__title">НЕ ПООЩРЯЛОСЬ</div>
-            <ul class="list">
-              <li>эмпатия</li>
-              <li>сомнения</li>
-              <li>альтернативные подходы</li>
-            </ul>
-          </div>
-        </div>
+  <p>
+    Формально программа классифицировалась как образовательная.
+    Фактически — как система фильтрации и отбора персонала.
+  </p>
 
-        <div class="note">
-          <div class="note__title mono">ЛИЧНО</div>
-          <div class="note__body">
-            Я быстро понял, что если сомневаюсь - я мешаю.
-          </div>
-        </div>
-      </section>
+  <p>
+    В процессе обучения поощрялись:
+  </p>
+
+  <ul class="list">
+    <li>скорость принятия решений</li>
+    <li>функциональная холодность</li>
+    <li>соблюдение иерархии и протоколов</li>
+  </ul>
+
+  <p class="muted">
+    Эмпатия рассматривалась как допустимая,
+    но не являлась приоритетной характеристикой.
+  </p>
+
+  <hr>
+
+  <p><strong>СВЯЗИ В ПРОЦЕССЕ ОБУЧЕНИЯ</strong></p>
+
+  <p>
+    В ходе практической подготовки у субъекта сформировалась устойчивая рабочая связь
+    с одним из обучающихся того же потока.
+  </p>
+
+  <p>
+    Взаимодействие характеризовалось как:
+  </p>
+
+  <ul class="list">
+    <li>постоянное совместное участие в практических модулях</li>
+    <li>неформальное распределение ролей</li>
+    <li>взаимная поддержка в стрессовых ситуациях</li>
+  </ul>
+
+  <p>
+    Связь не носила личного или романтического характера.
+    Рассматривалась как профессиональное доверие,
+    сформированное в условиях давления.
+  </p>
+
+  <hr>
+
+  <p><strong>ИНЦИДЕНТ В ХОДЕ ПРАКТИКИ</strong></p>
+
+  <p>
+    Во время одного из практических модулей,
+    приближённых к полевым условиям,
+    произошёл инцидент с летальным исходом.
+  </p>
+
+  <p>
+    Один из обучающихся (участник вышеописанной связи)
+    погиб в результате совокупности факторов:
+    перегрузка, ошибки в оценке обстановки,
+    ограниченные ресурсы.
+  </p>
+
+  <p>
+    Прямых нарушений со стороны субъекта зафиксировано не было.
+  </p>
+
+  <p class="muted">
+    Официальная формулировка в отчётах:
+    <br>
+    <strong>«Обучающийся не прошёл итоговую практическую аттестацию
+    и был исключён из программы.»</strong>
+  </p>
+
+  <p>
+    Упоминание летального исхода в открытых документах отсутствует.
+  </p>
+
+  <hr>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Он не провалил экзамен.<br>
+      Экзамен провалил его.<br><br>
+      Просто так было удобнее записать.
+    </div>
+  </div>
+
+  <div class="note">
+    <div class="note__title mono">ВНУТРЕННЕЕ ЗАМЕЧАНИЕ</div>
+    <div class="note__body">
+      После инцидента субъект демонстрировал
+      снижение неформальных контактов
+      и избегание устойчивых связей в группе.
+    </div>
+  </div>
+
+</section>
+
 
 <section class="card" id="fatal-cases">
 
