--- a/archive.html
+++ b/archive.html
@@ -519,6 +519,31 @@
 
 </section>
 
+<section class="card" id="voice-log-audio">
+
+  <div class="card__title">VOICE LOG // RECOVERED AUDIO</div>
+
+  <p class="muted">
+    Формат: аудиозапись<br>
+    Источник: локальный носитель<br>
+    Качество: нестабильное
+  </p>
+
+  <audio controls preload="metadata" class="audio-log">
+    <source src="/assets/cutter.mp3" type="audio/mpeg">
+    Ваш браузер не поддерживает аудио.
+  </audio>
+
+  <div class="note">
+    <div class="note__title mono">ПОМЕТКА</div>
+    <div class="note__body">
+      Запись повреждена.<br>
+      Отмечены резкие скачки громкости и посторонние шумы.<br>
+      Аудио восстановлено частично.
+    </div>
+  </div>
+
+</section>
 
       
       <section class="card" id="pre">
