--- a/archive.html
+++ b/archive.html
@@ -530,7 +530,7 @@
   </p>
 
   <audio controls preload="metadata" class="audio-log">
-    <source src="/assets/cutter.mp3" type="audio/mpeg">
+    <source src="assets/field_voice.mp3" type="audio/mpeg">
     Ваш браузер не поддерживает аудио.
   </audio>
 
