Update and rename nav_archive.html to archive.html

--- a/archive.html
+++ b/archive.html
@@ -7,7 +7,7 @@
   </p>
 
   <ul class="list">
-    <li><a href="archive.html">FILE 01 — Early Life</a></li>
+    <li><a href="archive1.html">FILE 01 — Early Life</a></li>
     <li><a href="education.html">FILE 02 — Education</a></li>
     <li><a href="field.html">FILE 03 — Field Incidents</a></li>
     <li><a href="brazil.html">FILE 04 — LATAM Incident</a></li>
