--- a/education.html
+++ b/education.html
@@ -35,6 +35,245 @@
     <!-- сюда ТОЛЬКО текст обучения -->
   </section>
 
+<section class="card" id="education">
+
+  <div class="card__title">КОРПОРАТИВНОЕ ОБУЧЕНИЕ // ПРАКТИЧЕСКАЯ ПОДГОТОВКА</div>
+
+  <p>
+    Субъект прошёл обучение в закрытой корпоративной медицинской программе
+    ранней подготовки, ориентированной на работу в нестабильных и высокорисковых средах.
+  </p>
+
+  <p>
+    Формально программа классифицировалась как образовательная.
+    Фактически — как система фильтрации и отбора персонала.
+  </p>
+
+  <p>
+    В процессе обучения поощрялись:
+  </p>
+
+  <ul class="list">
+    <li>скорость принятия решений</li>
+    <li>функциональная холодность</li>
+    <li>соблюдение иерархии и протоколов</li>
+  </ul>
+
+  <p class="muted">
+    Эмпатия рассматривалась как допустимая,
+    но не являлась приоритетной характеристикой.
+  </p>
+
+  <hr>
+
+  <p><strong>СВЯЗИ В ПРОЦЕССЕ ОБУЧЕНИЯ</strong></p>
+
+  <p>
+    В ходе практической подготовки у субъекта сформировалась устойчивая рабочая связь
+    с одним из обучающихся того же потока.
+  </p>
+
+  <p>
+    Взаимодействие характеризовалось как:
+  </p>
+
+  <ul class="list">
+    <li>постоянное совместное участие в практических модулях</li>
+    <li>неформальное распределение ролей</li>
+    <li>взаимная поддержка в стрессовых ситуациях</li>
+  </ul>
+
+  <p>
+    Связь не носила личного или романтического характера.
+    Рассматривалась как профессиональное доверие,
+    сформированное в условиях давления.
+  </p>
+
+  <hr>
+
+  <p><strong>ИНЦИДЕНТ В ХОДЕ ПРАКТИКИ</strong></p>
+
+  <p>
+    Во время одного из практических модулей,
+    приближённых к полевым условиям,
+    произошёл инцидент с летальным исходом.
+  </p>
+
+  <p>
+    Один из обучающихся (участник вышеописанной связи)
+    погиб в результате совокупности факторов:
+    перегрузка, ошибки в оценке обстановки,
+    ограниченные ресурсы.
+  </p>
+
+  <p>
+    Прямых нарушений со стороны субъекта зафиксировано не было.
+  </p>
+
+  <p class="muted">
+    Официальная формулировка в отчётах:
+    <br>
+    <strong>«Обучающийся не прошёл итоговую практическую аттестацию
+    и был исключён из программы.»</strong>
+  </p>
+
+  <p>
+    Упоминание летального исхода в открытых документах отсутствует.
+  </p>
+
+  <hr>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Он не провалил экзамен.<br>
+      Экзамен провалил его.<br><br>
+      Просто так было удобнее записать.
+    </div>
+  </div>
+
+  <div class="note">
+    <div class="note__title mono">ВНУТРЕННЕЕ ЗАМЕЧАНИЕ</div>
+    <div class="note__body">
+      После инцидента субъект демонстрировал
+      снижение неформальных контактов
+      и избегание устойчивых связей в группе.
+    </div>
+  </div>
+
+</section>
+
+
+<section class="card" id="fatal-cases">
+
+  <div class="card__title">КЛИНИЧЕСКАЯ ПРАКТИКА // ЛЕТАЛЬНЫЕ ИСХОДЫ</div>
+
+  <p>
+    В рамках перехода субъекта от обучающегося к полевому медицинскому специалисту
+    были зафиксированы два ключевых клинических случая с летальным исходом,
+    оказавших значительное влияние на формирование профессионального профиля.
+  </p>
+
+  <hr>
+
+  <p><strong>СЛУЧАЙ №1 — ПЕРВЫЙ ЛЕТАЛЬНЫЙ ИСХОД</strong></p>
+
+  <p>
+    Случай произошёл в период начальной полевой практики субъекта
+    в гражданском секторе с ограниченными ресурсами.
+  </p>
+
+  <p>
+    Пациент был доставлен с тяжёлыми травмами, несовместимыми
+    с немедленной стабилизацией при имеющемся оборудовании.
+  </p>
+
+  <p>
+    Эллис участвовал в оказании помощи в полном объёме своих полномочий:
+  </p>
+
+  <ul class="list">
+    <li>стабилизация дыхания</li>
+    <li>остановка кровопотери</li>
+    <li>поддержание жизненных показателей</li>
+  </ul>
+
+  <p>
+    Процедуры выполнялись корректно.
+    Ошибок в действиях субъекта не зафиксировано.
+  </p>
+
+  <p><span class="pill">ИТОГ</span> Пациент скончался.</p>
+
+  <p class="muted">
+    Формальный вывод: летальный исход обусловлен тяжестью первоначальных повреждений.
+    Действия медицинского персонала признаны соответствующими протоколу.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Я сделал всё, что мог.<br>
+      И этого оказалось недостаточно.<br><br>
+      Впервые я понял, что старание не гарантирует результата.
+    </div>
+  </div>
+
+  <hr>
+
+  <p><strong>СЛУЧАЙ №2 — ПОВТОРЯЮЩИЙСЯ ЛЕТАЛЬНЫЙ ИСХОД</strong></p>
+
+  <p>
+    Случай зафиксирован в ходе последующей полевой практики
+    после завершения базового цикла обучения.
+  </p>
+
+  <p>
+    Пациент поступил в критическом состоянии.
+    Первичная оценка указывала на крайне низкую вероятность стабилизации.
+  </p>
+
+  <p>
+    Эллис произвёл краткую оценку состояния,
+    инициировал базовые меры поддержки и
+    <strong>прекратил расширенное вмешательство</strong>
+    после подтверждения бесперспективности дальнейших действий.
+  </p>
+
+  <p>
+    Ресурсы были перераспределены на других пострадавших.
+  </p>
+
+  <p><span class="pill">ИТОГ</span> Пациент скончался.</p>
+
+  <p class="muted">
+    Формальный вывод: решение признано своевременным.
+    Действия субъекта соответствуют протоколам оптимизации ресурсов.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      В прошлый раз я держал его за руку до конца.<br>
+      В этот раз — я просто посмотрел на показатели
+      и переключился на следующего.<br><br>
+      Меня за это не наказали.<br>
+      Меня за это похвалили.
+    </div>
+  </div>
+
+  <hr>
+
+  <p><strong>ПСИХОЛОГИЧЕСКИЙ ПРОФИЛЬ (ОЦЕНКА)</strong></p>
+
+  <p class="muted">
+    По результатам наблюдений и разборов случаев
+    у субъекта отмечается формирование
+    <strong>эмоционально нестабильного, но функционального профиля</strong>.
+  </p>
+
+  <ul class="list">
+    <li>высокая эмпатия при первом контакте</li>
+    <li>быстрое подавление эмоциональной реакции в кризисе</li>
+    <li>накопление внутреннего напряжения после инцидентов</li>
+    <li>отсутствие внешних признаков дезорганизации</li>
+  </ul>
+
+  <p class="muted">
+    Эмоциональная нестабильность не приводит к снижению эффективности,
+    однако требует внешнего контроля при длительной полевой нагрузке.
+  </p>
+
+  <div class="note">
+    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Я научился не ломаться в моменте.<br>
+      Но никто не учил, что делать с этим потом.
+    </div>
+  </div>
+
+</section>
+  
   <!-- навигация -->
   <div class="nav-archive">
     <a href="archive1.html">← PREVIOUS FILE</a>
