--- a/education.html
+++ b/education.html
@@ -16,10 +16,10 @@
 
     <nav class="quick">
       <a href="ellis.html" class="q">← BACK</a>
-      <a href="#early" class="q">EARLY</a>
-      <a href="#family" class="q">FAMILY</a>
+      <a href="#education" class="q">EDUCATION</a>
+      <a href="#fatal-cases" class="q">FATAL-CASES</a>
       <a href="#edu" class="q">EDU</a>
-      <a href="#pre" class="q">PRE-INCIDENT</a>
+      <a href="field.html" class="q">FIELD</a>
     </nav>
   </header>
     
