--- a/archive1.html
+++ b/archive1.html
@@ -19,8 +19,9 @@
       <a href="ellis.html" class="q">← BACK</a>
       <a href="#early" class="q">EARLY</a>
       <a href="#family" class="q">FAMILY</a>
-      <a href="#edu" class="q">EDU</a>
-      <a href="#pre" class="q">PRE-INCIDENT</a>
+      <a href="education.html" class="q">EDUCATION</a>
+      <a href="field.html" class="q">FIELD</a>
+      <a href="nightcity.html" class="q">NIGHT-CITY</a>
     </nav>
   </header>
 
@@ -130,189 +131,7 @@
           </div>
         </div>
       </section>
-      
-      <section class="card" id="offreg">
-  <div class="card__title">ОПЕРАЦИЯ ВНЕ РЕЕСТРА // LATAM (ДОСЬЕ)</div>
 
-<div class="evidence">
-  <div class="video">
-    <video controls preload="metadata">
-      <source src="assets/OP whitelist.mp4" type="video/mp4">
-    </video>
-  </div>
-
-  <div class="evidence__cap mono">
-    VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
-    DATE: 2074-08-22 // SOURCE: STREET POLE CAM NODE 12 (LATAM)<br>
-    AUDIO: UNAVAILABLE // LOCATION: REDACTED
-  </div>
-</div>
-
-
-  <p><span class="pill">ФОРМАЛЬНО</span> гуманитарная и эвакуационная миссия: медсопровождение, помощь гражданским, стабилизация.</p>
-  <p><span class="pill">ФАКТИЧЕСКИ</span> вывод агентов, сбор информации, экстренная эвакуация активов.</p>
-
-  <div class="note">
-    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
-    <div class="note__body">
-      Блять...<br>
-      Помогите...
-    </div>
-  </div>
-</section>
-
-<section class="card" id="latam-incident">
-
-  <div class="card__title">LATAM EXPEDITION // INCIDENT REPORT</div>
-
-  <p class="muted">
-    Статус миссии: ПРОВАЛЕНА<br>
-    Регион: Южная Америка (LATAM)<br>
-    Статус субъекта: MIA (Missing In Action)<br>
-    Тело: не обнаружено
-  </p>
-
-  <hr>
-
-  <p>
-    После разрушения экспедиционной группы и потери командной структуры
-    субъект действовал автономно в условиях радиоактивного заражения,
-    биологических аномалий и постоянной угрозы.
-  </p>
-
-  <p>
-    Отмечены:
-  </p>
-
-  <ul class="list">
-    <li>дезориентация</li>
-    <li>отказ имплантов</li>
-    <li>лучевое поражение</li>
-    <li>прогрессирующая потеря функциональности тела</li>
-  </ul>
-
-  <hr>
-
-  <p><strong>ЛИЧНЫЕ ЗАПИСИ</strong></p>
-  <p class="muted">(фрагмент, восстановлено частично)</p>
-
-  <div class="note">
-    <div class="note__title mono">FIELD LOG</div>
-    <div class="note__body">
-      День неизвестен.<br>
-      Счётчик трещит почти постоянно.<br>
-      Я перестал различать, где фон, а где опасно.<br><br>
-
-      Джунгли здесь не зелёные — они ржавые.<br>
-      Всё пахнет гнилью и озоном.<br><br>
-
-      Импланты начали отказывать один за другим.<br>
-      Сначала фильтры. Потом стабилизация.<br><br>
-
-      Я нашёл дом. Генератор ещё работал.<br>
-      Там были люди.<br><br>
-
-      Я не буду писать, как это произошло.<br>
-      Потому что помню слишком хорошо.<br><br>
-
-      Импланты подошли.<br>
-      Старые. Не идеальные. Но рабочие.<br><br>
-
-      Каждый эдди — это ещё один день жизни.<br>
-      Я тогда выбрал жить.
-    </div>
-  </div>
-
-  <hr>
-
-  <p><strong>ПОЛЕВАЯ САМОХИРУРГИЯ</strong></p>
-
-  <div class="note">
-    <div class="note__title mono">LOCAL RECORD // UNAUTHORIZED</div>
-    <div class="note__body">
-      Анестезии не было.<br>
-      Была только логика.<br><br>
-
-      Имплант перегревался — я видел это по цифрам.<br>
-      Разрез вышел неровный.<br><br>
-
-      Имплант несовместим. Частично.<br>
-      Но этого хватит.<br><br>
-
-      Когда модуль встал на место —<br>
-      мир на секунду погас.<br><br>
-
-      Система стабилизирована.<br>
-      Ошибки допустимы.<br><br>
-
-      Работает — значит жив.
-    </div>
-  </div>
-
-  <hr>
-
-  <p><strong>МЕДИЦИНСКИЙ СТАТУС (ПОСЛЕ ИНЦИДЕНТА)</strong></p>
-
-  <ul class="list">
-    <li>тяжёлое лучевое поражение</li>
-    <li>утрата конечностей</li>
-    <li>частичная потеря зрения</li>
-    <li>повреждение нервной системы</li>
-    <li>экстренная тотальная кибернетическая реконструкция</li>
-  </ul>
-
-  <p class="muted">
-    Часть имплантов устаревшие или несовместимые.<br>
-    Стабилизация достигнута не за счёт качества,<br>
-    а за счёт количества замен.
-  </p>
-
-  <hr>
-
-  <p><strong>ФИНАНСИРОВАНИЕ ЛЕЧЕНИЯ</strong></p>
-
-  <p class="muted">
-    Источник средств не раскрыт.<br>
-    Вероятно: утечка чувствительных данных через сторонние каналы.
-  </p>
-
-  <div class="note">
-    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
-    <div class="note__body">
-      Я больше не верю в невинность.<br>
-      Только в последствия.
-    </div>
-  </div>
-
-</section>
-
-<section class="card" id="voice-log-audio">
-
-  <div class="card__title">VOICE LOG // RECOVERED AUDIO</div>
-
-  <p class="muted">
-    Формат: аудиозапись<br>
-    Источник: локальный носитель<br>
-    Качество: нестабильное
-  </p>
-
-  <audio controls preload="metadata" class="audio-log">
-    <source src="assets/field_voice.mp3" type="audio/mpeg">
-    Ваш браузер не поддерживает аудио.
-  </audio>
-
-  <div class="note">
-    <div class="note__title mono">ПОМЕТКА</div>
-    <div class="note__body">
-      Запись повреждена.<br>
-      Отмечены резкие скачки громкости и посторонние шумы.<br>
-      Аудио восстановлено частично.
-    </div>
-  </div>
-
-</section>
-
-      
       <section class="card" id="pre">
         <div class="card__title">ПРЕДВАРИТЕЛЬНЫЕ ИНЦИДЕНТЫ (КРАТКО)</div>
 
