--- a/education.html
+++ b/education.html
@@ -18,8 +18,9 @@
       <a href="ellis.html" class="q">← BACK</a>
       <a href="#education" class="q">EDUCATION</a>
       <a href="#fatal-cases" class="q">FATAL-CASES</a>
-      <a href="#edu" class="q">EDU</a>
+      <a href="archive1.html" class="q">CHILDHOOD</a>
       <a href="field.html" class="q">FIELD</a>
+      <a href="nightcity.html" class="q">NIGHT-CITY</a>
     </nav>
   </header>
     
