--- a/field.html
+++ b/field.html
@@ -16,10 +16,11 @@
 
     <nav class="quick">
       <a href="ellis.html" class="q">← BACK</a>
-      <a href="#early" class="q">EARLY</a>
-      <a href="#family" class="q">FAMILY</a>
-      <a href="#edu" class="q">EDU</a>
-      <a href="#pre" class="q">PRE-INCIDENT</a>
+      <a href="#offreg" class="q">OFFREG</a>
+      <a href="#voice-log-audio" class="q">AUDIO_LOG</a>
+      <a href="archive1.html" class="q">CHILDHOOD</a>
+      <a href="education.html" class="q">EDUCATION</a>
+      <a href="nightcity.html" class="q">NIGHT-CITY</a></a>
     </nav>
   </header>
     
@@ -220,7 +221,7 @@
   <!-- навигация -->
   <div class="nav-archive">
     <a href="education.html">← PREVIOUS FILE</a>
-    <a href="brazil.html">NEXT FILE →</a>
+    <a href="nightcity.html">NEXT FILE →</a>
   </div>
    
 </section>
