--- a/archive1.html
+++ b/archive1.html
@@ -16,7 +16,7 @@
     </div>
 
     <nav class="quick">
-      <a href="ellis.html" class="q">← BACK</a>
+      <a href="archive.html" class="q">← BACK</a>
       <a href="#early" class="q">EARLY</a>
       <a href="#family" class="q">FAMILY</a>
       <a href="education.html" class="q">EDUCATION</a>
