--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
     </div>
 
     <nav class="quick">
-      <a href="archive1.html" class="q">← BACK</a>
+      <a href="archive.html" class="q">← BACK</a>
       <a href="#education" class="q">EDUCATION</a>
       <a href="#fatal-cases" class="q">FATAL-CASES</a>
       <a href="archive1.html" class="q">CHILDHOOD</a>
