--- a/archive.html
+++ b/archive.html
@@ -16,10 +16,10 @@
 
     <nav class="quick">
       <a href="ellis.html" class="q">← BACK</a>
-      <a href="#early" class="q">EARLY</a>
-      <a href="#family" class="q">FAMILY</a>
-      <a href="#edu" class="q">EDU</a>
-      <a href="#pre" class="q">PRE-INCIDENT</a>
+      <a href="archive1.html" class="q">CHILDHOOD</a>
+      <a href="education.html" class="q">EDUCATION</a>
+      <a href="field.html" class="q">FIELD</a>
+      <a href="nightcity.html" class="q">NIGHT-CITY</a></a>
     </nav>
   </header>
     <main class="layout">
