--- a/education.html
+++ b/education.html
@@ -40,6 +40,13 @@
 
   <div class="card__title">КОРПОРАТИВНОЕ ОБУЧЕНИЕ // ПРАКТИЧЕСКАЯ ПОДГОТОВКА</div>
 
+<div class="evidence">
+  <img src="assets/childell.jpg" alt="Surveillance still, EU Pharma Zone, 2064">
+  <div class="evidence__cap mono">
+    YEAR 2067 // SOURCE: EEC SCHOOL
+  </div>
+</div>
+  
   <p>
     Субъект прошёл обучение в закрытой корпоративной медицинской программе
     ранней подготовки, ориентированной на работу в нестабильных и высокорисковых средах.
