--- a/nightcity.html
+++ b/nightcity.html
@@ -169,6 +169,185 @@
   </div>
 </section>
 
+<section class="card" id="nightcity-notes">
+  <div class="card__title">FILE 05 — NIGHT CITY // RECOVERED NOTES</div>
+
+  <div class="evidence" style="margin-top:10px">
+    <div class="evidence__cap mono">
+      SOURCE: LOCAL CACHE (PARTIAL) // INTEGRITY: 63% // LAST REBUILD: 2077-11-02
+    </div>
+  </div>
+
+  <div class="log mono" style="margin-top:14px">
+    <div>[00:00] playback: unstable // noise floor: high</div>
+    <div>[00:03] author: E.VALE (unverified)</div>
+    <div>[00:07] tag: NIGHT_CITY_ARRIVAL</div>
+  </div>
+
+  <div class="note" style="margin-top:14px">
+    <div class="note__title mono">ЛИЧНАЯ ЗАПИСЬ</div>
+    <div class="note__body">
+      Я не «прибыл» в Найт-Сити.<br>
+      Я дополз.
+    </div>
+  </div>
+
+  <p style="margin-top:14px">
+    LeakNews были единственным вариантом. Я отдал им больше, чем хотел. Больше, чем планировал.
+    Novimmune — имена, цепочки, логистика, внутренние отчёты. Всё, что когда-то называл «работой».
+  </p>
+
+  <p>
+    За это я получил: вход в город, первые необходимые импланты, и шанс не умереть в ближайшие недели.
+    Не сделку. Обмен воздуха на данные.
+  </p>
+
+  <div class="log mono" style="margin-top:14px">
+    <div>[00:41] tag: CONTRACTS / EDGERUNNER</div>
+    <div>[00:44] <span class="warn">audio crackle</span> // street noise // distant sirens</div>
+  </div>
+
+  <p style="margin-top:14px">
+    Первые месяцы — контракты. Мелкие. Грязные. Никакой романтики.
+  </p>
+
+  <p>
+    Эджраннер. Слово звучит громче, чем есть на самом деле.
+    Это значит: ты полезный, ты заменимый, ты жив — пока нужен.
+  </p>
+
+  <p>
+    Я лечил, таскал, прикрывал, иногда — просто был рядом.
+    Деньги уходили быстрее, чем приходили. Импланты держались на честном слове и костылях.
+  </p>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[01:12] tag: DATA_LEAK_RISK</div>
+    <div>[01:15] marker: corporate interest spike</div>
+  </div>
+
+  <p style="margin-top:14px">
+    Потом стало хуже. Данные начали всплывать — не напрямую. Обрывками. Намёками.
+    Слишком много корпораций вдруг «узнали» обо мне.
+  </p>
+
+  <p>
+    Если бы не Ирен — я бы даже не понял, что меня уже почти стерли.
+    Она и ЛикНью: подчистили хвосты, сломали цепочки, сожгли зеркала.
+  </p>
+
+  <div class="note" style="margin-top:12px">
+    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Я тогда впервые понял, что один я здесь не выживу.
+    </div>
+  </div>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[02:03] tag: BIOSCULPT</div>
+    <div>[02:06] <span class="warn">breathing</span> // clinic hum // chair creak</div>
+  </div>
+
+  <p style="margin-top:14px">
+    Биоскульптинг был не про красоту. И не про новую жизнь.
+    Это было: стереть старое лицо, стереть старые маркеры, стереть «Эллиса Вейла из Novimmune».
+  </p>
+
+  <p>
+    Когда я увидел себя после — я ничего не почувствовал.
+    Ни радости. Ни отвращения. Просто: это больше не я. И, может быть, так лучше.
+  </p>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[03:11] tag: DARKNET_LEAK_NODE</div>
+    <div>[03:14] note: "quiet leaks / no slogans"</div>
+  </div>
+
+  <p style="margin-top:14px">
+    LeakNews… слишком много крика. Слишком много грязи. Каждый утюг орёт, каждый канал врёт по-своему.
+    Я решил, что могу лучше. Тише. Точнее. Анонимно.
+  </p>
+
+  <p>
+    Даркнет-сеть. Утечки без лозунгов. Данные без морали.
+    Год работы: файлы, имена, связи. Я собирал аккуратно. Почти профессионально.
+  </p>
+
+  <div class="note" style="margin-top:12px">
+    <div class="note__title mono">ЛИЧНАЯ ЗАПИСЬ</div>
+    <div class="note__body">
+      А потом пришли.
+    </div>
+  </div>
+
+  <p style="margin-top:14px">
+    Инквизиторы. Они не ломали — они стирать умеют.
+    Базы нет. Архивов нет. И что хуже — все данные обо мне они забрали с собой.
+  </p>
+
+  <p class="muted">
+    *Примечание: восстановление утраченных массивов не представляется возможным. Сигнатуры зачистки соответствуют Inquisitorial-grade intrusion.*
+  </p>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[04:26] tag: CONTRACT_SURVEILLANCE</div>
+    <div>[04:29] target: KAS HAVEN (industrial watch)</div>
+  </div>
+
+  <p style="margin-top:14px">
+    Контракт на слежку я сначала не воспринял всерьёз. Обычное промышленное наблюдение: Кэс Хэйвен.
+    Я не знал его. Он не знал меня.
+  </p>
+
+  <p>
+    Забавно, что в это же время ему пришёл заказ — следить за мной.
+    Мы оба об этом узнали позже.
+  </p>
+
+  <p>
+    Тогда была только засада. Мальстрем. Узкий квартал. Ошибка в тайминге.
+    Если бы не совместная работа — нас бы там и оставили.
+  </p>
+
+  <p>
+    Я стабилизировал его. Он прикрывал меня.
+    После — тишина. Два человека, которые должны были быть врагами, но слишком устали, чтобы продолжать эту игру.
+  </p>
+
+  <div class="note" style="margin-top:12px">
+    <div class="note__title mono">ВНУТРЕННЯЯ ПОМЕТКА</div>
+    <div class="note__body">
+      Слово за слово — и мы просто решили не стрелять друг в друга дальше.
+    </div>
+  </div>
+
+  <hr class="sep">
+
+  <div class="log mono">
+    <div>[05:58] tag: END</div>
+    <div>[06:01] <span class="warn">signal drop</span> // "…я всё ещё здесь"</div>
+  </div>
+
+  <p style="margin-top:14px">
+    Иногда мне кажется, что вся моя жизнь здесь — цепочка случайных совпадений, которые я называю решениями.
+  </p>
+
+  <p>
+    Я не герой. Не жертва. Не легенда. Я просто всё ещё здесь.
+    И, значит, пока что — жив.
+  </p>
+
+</section>
+
+    
   <!-- навигация -->
   <div class="nav-archive">
     <a href="field.html">← PREVIOUS FILE</a>
