--- a/iren.html
+++ b/iren.html
@@ -37,7 +37,6 @@
     linear-gradient(180deg, #030603, #020402);
 }
 
-
   </style>
 </head>
   
@@ -119,6 +118,11 @@
     при содействии банды
     <b>ЖИВОТНЫЕ</b>.
   </p>
+
+        <p class="muted">
+    Также субъект Ирен имеет большую заинтересованность в теме искусства. Данная тематика  является неотъемлиемой частью жизни. В баре Neon Vind обнаружено несколько объектов искусства под авторством субъекта.<br>
+          Оценка окружением: КРАЙНЕ ПОЛОЖИТЕЛЬНО.
+  </p>
 </section>
 
       <section class="card" id="family">
@@ -157,6 +161,12 @@
     включая инциденты повышенного риска,
     способствовало формированию
     взаимного доверия.
+  </p>
+
+    <p>
+    Дополнительная устойчивая дружеская связь
+    с субъектом <b>Агата</b><br>.
+    Общие интересы субъектов - искусство и творчество.
   </p>
       </section>
 
@@ -286,6 +296,17 @@
     <span class="redact is-static">НЕ ПОДТВЕРЖДЕНА</span>.
   </p>
     </section>
+<section class="card" id="incident">
+  <div class="card__title">НЕЗАРЕГИСТРИРОВАННЫЙ ИНЦИДЕНТ</div>
+
+  <p class="muted">
+    Субъектом был создан "Кастомный" объект интеръера - ковёр для её друга - Нико Васкез.</br>
+  Результат: НЕКОТОРОЕ ЗАМЕШАТЕЛЬСТВО СУБЪЕКТА НИКО.
+  </p>
+  
+</section>
+
+  
   </section>
   </main>
 
